results/SVCOMP/4-shot/log-if_icmp1-2024_03_19_00_51_10.txt
class if_icmp1 {
    //@ requires i + 1 < 0;
    //@ ensures \result == -1;
    public static int fun(int i) {
        if (i + 1 < 0) return -1;
        return f(i, i + 1);
    }

    //@ ensures \result == false ==> i == j || i >= j || j <= i || j < i;
    //@ ensures \result == true ==> j > i || j < i;
    private static boolean f(int i, int j) {
        if (i == j) {
            return false;
        }
        if (i >= j) {
            return false;
        }
        if (j > i) {
            return true;
        } else {
            return false;
        }
        if (j <= i) {
            return false;
        }
        if (j < i) {
            return false;
        } else {
            return true;
        }
    }
}
/home/max/Documents/JMLGPT/tmp/if_icmp1.java:6: error: incompatible types: boolean cannot be converted to int
        return f(i, i + 1);
                ^
1 error

